--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pandas
-requests
-pytz
-python-telegram-bot==13.15
+numpy
+matplotlib
 mplfinance
+requests
 apscheduler
+python-telegram-bot==13.15
+pytz
